// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`intl-watcher plugin > error handling > unsupported expression 1`] = `
"{
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > error handling > unsupported expression 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m src/app/fixtures/unsupported-expression.tsx:10:4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[33m[1m⚠[22m[39m [33mUnsupported expression of kind ConditionalExpression detected.[39m

10 | t(randomBoolean() ? 'one' : 'two')
|   [31m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[39m

[32m[1mℹ[22m[39m [32mThis syntax is not currently supported. If you need support for it, please open a feature request
detailing the syntax kind and the entire expression. Submit your request here:
https://github.com/ChristianIvicevic/intl-watcher/issues/new?template=03-feature.yml[39m

[33m[1m⚠[22m[39m src/app/fixtures/unsupported-expression.tsx:12:4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[33m[1m⚠[22m[39m [33mUnsupported expression of kind CallExpression detected.[39m

12 | t(randomKey())
|   [31m^^^^^^^^^^^[39m

[32m[1mℹ[22m[39m [32mThis syntax is not currently supported. If you need support for it, please open a feature request
detailing the syntax kind and the entire expression. Submit your request here:
https://github.com/ChristianIvicevic/intl-watcher/issues/new?template=03-feature.yml[39m

[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > edge cases > server-side options 1`] = `
"{
	"newServerKey": "[NYT: newServerKey]",
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > edge cases > server-side options 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > default options 1`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newClientKey": "[NYT: newClientKey]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]",
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > default options 2`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newClientKey": "[NYT: newClientKey]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]",
	"unusedKey": "In keiner Datei mehr genutzt",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > default options 3`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`key1\`
[34m[1m✓[22m[39m Added new i18n key \`key1Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key2\`
[34m[1m✓[22m[39m Added new i18n key \`key2Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key3\`
[34m[1m✓[22m[39m Added new i18n key \`key3Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerKey\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 1`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newClientKey": "[NYT: newClientKey]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]",
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 2`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newClientKey": "[NYT: newClientKey]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]",
	"unusedKey": "In keiner Datei mehr genutzt",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 3`] = `
"{
	"newClientKey": "[NYT: newClientKey]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 4`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 5`] = `
"{
	"newClientKey": "[NYT: newClientKey]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 6`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 7`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`key1\`
[34m[1m✓[22m[39m Added new i18n key \`key1Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key2\`
[34m[1m✓[22m[39m Added new i18n key \`key2Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key3\`
[34m[1m✓[22m[39m Added new i18n key \`key3Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerKey\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom fallback for new keys 1`] = `
"{
	"key1": "[Missing translation: key1]",
	"key1Suffix": "[Missing translation: key1Suffix]",
	"key2": "[Missing translation: key2]",
	"key2Suffix": "[Missing translation: key2Suffix]",
	"key3": "[Missing translation: key3]",
	"key3Suffix": "[Missing translation: key3Suffix]",
	"literal": "[Missing translation: literal]",
	"newClientKey": "[Missing translation: newClientKey]",
	"newServerKey": "[Missing translation: newServerKey]",
	"richText": "[Missing translation: richText]",
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom fallback for new keys 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`key1\`
[34m[1m✓[22m[39m Added new i18n key \`key1Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key2\`
[34m[1m✓[22m[39m Added new i18n key \`key2Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key3\`
[34m[1m✓[22m[39m Added new i18n key \`key3Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerKey\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom partitioning function names 1`] = `
"{
	"customKey1": "[NYT: customKey1]",
	"customKey1Suffix": "[NYT: customKey1Suffix]",
	"customKey2": "[NYT: customKey2]",
	"customKey2Suffix": "[NYT: customKey2Suffix]",
	"customKey3": "[NYT: customKey3]",
	"customKey3Suffix": "[NYT: customKey3Suffix]",
	"newCustomClientKey": "[NYT: newCustomClientKey]",
	"newCustomServerKey": "[NYT: newCustomServerKey]",
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom partitioning function names 2`] = `
"{
	"newCustomClientKey": "[NYT: newCustomClientKey]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom partitioning function names 3`] = `
"{
	"customKey1": "[NYT: customKey1]",
	"customKey1Suffix": "[NYT: customKey1Suffix]",
	"customKey2": "[NYT: customKey2]",
	"customKey2Suffix": "[NYT: customKey2Suffix]",
	"customKey3": "[NYT: customKey3]",
	"customKey3Suffix": "[NYT: customKey3Suffix]",
	"newCustomServerKey": "[NYT: newCustomServerKey]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom partitioning function names 4`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`newCustomClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`customKey1\`
[34m[1m✓[22m[39m Added new i18n key \`customKey1Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`customKey2\`
[34m[1m✓[22m[39m Added new i18n key \`customKey2Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`customKey3\`
[34m[1m✓[22m[39m Added new i18n key \`customKey3Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`newCustomServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > default options 1`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newClientKey": "[NYT: newClientKey]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]",
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > default options 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`key1\`
[34m[1m✓[22m[39m Added new i18n key \`key1Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key2\`
[34m[1m✓[22m[39m Added new i18n key \`key2Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key3\`
[34m[1m✓[22m[39m Added new i18n key \`key3Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerKey\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > dictionary partitioning 1`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newClientKey": "[NYT: newClientKey]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]",
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > dictionary partitioning 2`] = `
"{
	"newClientKey": "[NYT: newClientKey]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > dictionary partitioning 3`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > dictionary partitioning 4`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`key1\`
[34m[1m✓[22m[39m Added new i18n key \`key1Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key2\`
[34m[1m✓[22m[39m Added new i18n key \`key2Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key3\`
[34m[1m✓[22m[39m Added new i18n key \`key3Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerKey\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > unused key removal 1`] = `
"{
	"key1": "[NYT: key1]",
	"key1Suffix": "[NYT: key1Suffix]",
	"key2": "[NYT: key2]",
	"key2Suffix": "[NYT: key2Suffix]",
	"key3": "[NYT: key3]",
	"key3Suffix": "[NYT: key3Suffix]",
	"literal": "[NYT: literal]",
	"newClientKey": "[NYT: newClientKey]",
	"newServerKey": "[NYT: newServerKey]",
	"richText": "[NYT: richText]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > unused key removal 2`] = `
"[37m[1m○[22m[39m Scanning...
[34m[1m✓[22m[39m Removed unused i18n key \`unusedKey\`
[34m[1m✓[22m[39m Removed unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[34m[1m✓[22m[39m Removed unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`key1\`
[34m[1m✓[22m[39m Added new i18n key \`key1Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key2\`
[34m[1m✓[22m[39m Added new i18n key \`key2Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`key3\`
[34m[1m✓[22m[39m Added new i18n key \`key3Suffix\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerKey\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > edge cases > server-side options 1`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > edge cases > server-side options 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > error handling > dynamic namespace 1`] = `
"{
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > error handling > dynamic namespace 2`] = `
"[37m[1m○[22m[39m Scanning...
[31m[1m⨯[22m[39m src/app/fixtures/dynamic-namespaces.tsx:7:34 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[31m[1m⨯[22m[39m [31mA dynamic namespace value was provided instead of a literal string.[39m

7 | const t = await getTranslations(randomNamespace())
|                                 [31m^^^^^^^^^^^^^^^^^[39m

[32m[1mℹ[22m[39m [32mFor reliable extraction of translation keys, please ensure that the namespace is defined
as a static string literal (or a variable that unequivocally resolves to one).[39m

[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > default options 1`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > default options 2`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "In keiner Datei mehr genutzt",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > default options 3`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 1`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 2`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "In keiner Datei mehr genutzt",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 3`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 4`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 5`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 6`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 7`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom fallback for new keys 1`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[Missing translation: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[Missing translation: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom fallback for new keys 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom partitioning function names 1`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom partitioning function names 2`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom partitioning function names 3`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom partitioning function names 4`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > default options 1`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > default options 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > dictionary partitioning 1`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	},
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > dictionary partitioning 2`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > dictionary partitioning 3`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > dictionary partitioning 4`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > unused key removal 1`] = `
"{
	"nestedNamespace": {
		"deeplyNestedNamespace": {
			"newClientKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newClientKey]",
			"newServerKey": "[NYT: nestedNamespace.deeplyNestedNamespace.newServerKey]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > unused key removal 2`] = `
"[37m[1m○[22m[39m Scanning...
[34m[1m✓[22m[39m Removed unused i18n key \`unusedKey\`
[34m[1m✓[22m[39m Removed unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[34m[1m✓[22m[39m Removed unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newClientKey\`
[34m[1m✓[22m[39m Added new i18n key \`nestedNamespace.deeplyNestedNamespace.newServerKey\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > regressions > property access expression in template literal 1`] = `
"{
	"key1PropertyAccessExpressionInTemplateLiteral": "[NYT: key1PropertyAccessExpressionInTemplateLiteral]",
	"key1PropertyAccessExpressionInTemplateLiteralDeep": "[NYT: key1PropertyAccessExpressionInTemplateLiteralDeep]",
	"key2PropertyAccessExpressionInTemplateLiteral": "[NYT: key2PropertyAccessExpressionInTemplateLiteral]",
	"key2PropertyAccessExpressionInTemplateLiteralDeep": "[NYT: key2PropertyAccessExpressionInTemplateLiteralDeep]",
	"key3PropertyAccessExpressionInTemplateLiteral": "[NYT: key3PropertyAccessExpressionInTemplateLiteral]",
	"key3PropertyAccessExpressionInTemplateLiteralDeep": "[NYT: key3PropertyAccessExpressionInTemplateLiteralDeep]",
	"unusedKey": "No longer referenced in any source file",
	"unusedNestedNamespace": {
		"unusedDeeplyNestedNamespace": {
			"unusedDeeplyNestedKey": ""
		},
		"unusedNestedKey": ""
	}
}
"
`;

exports[`intl-watcher plugin > regressions > property access expression in template literal 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedDeeplyNestedNamespace.unusedDeeplyNestedKey\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedNestedNamespace.unusedNestedKey\`
[34m[1m✓[22m[39m Added new i18n key \`key1PropertyAccessExpressionInTemplateLiteral\`
[34m[1m✓[22m[39m Added new i18n key \`key1PropertyAccessExpressionInTemplateLiteralDeep\`
[34m[1m✓[22m[39m Added new i18n key \`key2PropertyAccessExpressionInTemplateLiteral\`
[34m[1m✓[22m[39m Added new i18n key \`key2PropertyAccessExpressionInTemplateLiteralDeep\`
[34m[1m✓[22m[39m Added new i18n key \`key3PropertyAccessExpressionInTemplateLiteral\`
[34m[1m✓[22m[39m Added new i18n key \`key3PropertyAccessExpressionInTemplateLiteralDeep\`
[34m[1m✓[22m[39m Finished in <timing>"
`;
